# danang-nightlife

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
agent-commands/analyze/: analyze.md
agent-commands/architect/: architect.md
agent-commands/assess-context/: assess-context.md  context-assessment-template.md
agent-commands/checklist/: checklist-template.md  checklist.md
agent-commands/clarify/: clarify.md
agent-commands/design/: design-template.md  design.md
agent-commands/design-e2e-test/: design-e2e-test.md
agent-commands/implement/: implement.md
agent-commands/perform-e2e-test/: perform-e2e-test.md
agent-commands/set-ground-rules/: set-ground-rules.md
agent-commands/shared-templates/: vscode-settings.json
agent-commands/specify/: specify.md
agent-commands/standardize/: standardize.md
agent-commands/taskify/: taskify.md  tasks-template.md
agent-commands/tasks-to-ado/: tasks-to-ado.md
agent-commands/tasks-to-issues/: tasks-to-issues.md
agents/: business-analyst.md  developer.md  project-manager.md  system-architect.md  tester.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/python/: common.py  setup-architect.py  setup-assess-context.py  setup-design-e2e-test.py  setup-design.py  setup-perform-e2e-test.py  setup-standardize.py  update-agent-context.py
templates/: AI-Agents-Configs.md  nightlife.yaml
(+167 files in other folders)
