[project]
name = "nightlife-cli"
version = "0.1.1"
description = "Nightlife CLI, part of Danang Nightlife Project. A framework to develop your project with Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
nightlife = "nightlife_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nightlife_cli"]

